Project1/AWS/Terraform/secgrp.tf
resource "aws_security_group" "portfolio_stack_sg" {
  name        = "portfolio-stack-sg"
  description = "Sec Grp for portfolio ssh and http"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.MYIP]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    tags = {
    Name = "allow-ssh-and-http"
  }
}
